Fix : order z-index

--- a/src/scss/blocks/_order.scss
+++ b/src/scss/blocks/_order.scss
@@ -1,5 +1,5 @@
 .order {
-    z-index: 0;
+    z-index: 1;
     position: relative;
     height: 60px;
     width: 250px;
